# yt-meta

./: .gitignore  BEST_OF_BREED_ANALYSIS.md  CHANGELOG.md  CODE_REVIEW.md  FEATURE_PARITY_PLAN.md  PERFORMANCE_COMPARISON.md  README.md  benchmark_comment_fetchers.py  debug_comment_structure.py  debug_continuation_tokens.py  debug_payloads.py  dump_channel_data.py  dump_comment_data.py  example_results.txt  pyproject.toml  temp_debug_continuation.py
.cache_test/: cache.db
.github/workflows/: ci.yml
.my_yt_meta_cache/: cache.db
examples/: 28_pinned_comment_detection.py  create_fixture.py  generate_test_fixtures.py
examples/features/: 01_get_video_metadata.py  02_get_channel_metadata.py  03_get_channel_videos_basic.py  04_get_channel_videos_full_metadata.py  05_filter_channel_videos_by_date.py  06_get_playlist_videos.py  07_filter_playlist_by_date.py  08_filter_by_view_count.py  09_filter_by_duration.py  10_filter_by_like_count.py  11_filter_by_description_snippet.py  12_filter_by_title.py  13_filter_by_category.py  14_filter_by_keywords.py  15_filter_by_full_description.py  16_filter_by_publish_date.py  18_benchmark_caching.py  19_alternative_caching_sqlite.py  20_get_channel_shorts_basic.py  21_get_channel_shorts_full_metadata.py  22_get_video_comments.py  23_filter_validation.py  24_multi_component_filter.py  25_comment_sorting_demonstration.py  26_hierarchical_comments_demonstration.py  27_comprehensive_comment_fetching.py  27a_comment_deduplication_sorting.py  27b_comment_analysis_hierarchical.py  29_progress_callback_demonstration.py  (+3 more)
tests/: conftest.py  test_best_comment_fetcher.py  test_caching.py  test_channel_fetcher.py  test_client.py  test_comment_fetcher.py  test_filtering.py  test_parsing.py  test_playlist.py  test_playlist_fetcher.py  test_transcript_fetcher.py  test_validation.py  test_video_fetcher.py
yt_meta/: __init__.py  client.py  comment_api_client.py  comment_fetcher.py  comment_parser.py  constants.py  fetchers.py  filtering.py  parsing.py  transcript_fetcher.py  utils.py  validators.py
(+26 files in other folders)
