[project]
name = "yt-meta"
version = "0.3.1"
description = "A lightweight, dependency-free library for fetching YouTube metadata."
readme = "README.md"
authors = [{ name = "Sami W.", email = "samwitteveenai@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.10"
dependencies = [
    "httpx",
    "beautifulsoup4",
    "dateparser",
    "pytz", # A dependency of dateparser
    "loguru",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "pytest-mock"]

[project.urls]
Homepage = "https://github.com/samwitteveenai/yt-meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
