[project]
name = "yt-meta"
version = "0.3.1"
description = "A lightweight, dependency-free library for fetching YouTube metadata."
readme = "README.md"
authors = [{ name = "Sami W.", email = "samwitteveenai@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.10"
dependencies = [
    "httpx",
    "beautifulsoup4",
    "dateparser",
    "pytz", # A dependency of dateparser
    "loguru",
    "diskcache>=5.6.3",
    "pytest-mock>=3.14.1",
    "rich>=14.0.0",
    "sqlitedict>=2.1.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "pytest-mock"]

[project.urls]
Homepage = "https://github.com/samwitteveenai/yt-meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
markers = [
    "integration: marks tests as integration tests (makes network requests)",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
